# Proyecto1_DatosII_memoria

./: .gitignore  App.java  CMakeLists.txt  Client_Socket.java  Observer.cpp  Observer.h  Player.cpp  Player.h  README.md  Server_Socket.cpp  Server_Socket.h  Starter.cpp  Starter.h  Starter.java  cards.cpp  cards.h  client_Listen.java
QTPLIS/: CMakeLists.txt  bigwindow.cpp  bigwindow.h  bigwindow.ui  main.cpp  set_get.cpp  set_get.h
Server_Socket/: CMakeLists.txt  Server_Socket.cpp  Server_Socket.h  set_get.cpp  set_get.h
Server_Socket/Server_Socket/: CMakeLists.txt  Player.cpp  Player.h  Server_Socket.cpp  Server_Socket.h  Starter.cpp  Starter.h  set_get.cpp  set_get.h
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/QTPLIS_autogen/: deps  mocs_compilation.cpp
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/QTPLIS_autogen/EWIEGA46WW/: moc_bigwindow.cpp.d
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/QTPLIS_autogen/include/: ui_bigwindow.h
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Release/QTPLIS_autogen/: deps
build-QTPLIS-Desktop_Qt_6_2_3_MinGW_64_bit-Release/QTPLIS_autogen/EWIEGA46WW/: moc_bigwindow.cpp  moc_bigwindow.cpp.d
x64-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/Server_Socket/: cmake_install.cmake
(+21 files in other folders)
